# pangram-breaker

./: .gitignore  README.md  config.example.toml  pyproject.toml
inputs/: basic_assignments.txt
scripts/: basic_prompt.py  detect_text.py  run_assignments.py  styled_essay.py  translate_roundtrip.py
src/pangram_breaker/: config.py  detector.py  llm.py  runlog.py
